--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
-.hidden {
+/* .hidden {
     display: none;
-  }
+  } */
 
 body {
+    border: 3px solid #FB2;
     text-align: center;
     background-image: url("https://i.pinimg.com/originals/dc/55/25/dc55259c7ff8bd5a1ca1dbfff4e01a73.jpg");
     background-size: cover;
@@ -75,14 +76,11 @@ h2 {
 }
 
 textarea {
-
-	border: 3px solid #FB2;
     padding: 5px;
     color: black
     font-family: fantasy;
     background: linear-gradient();
-    background-color: #F7F4D6;
-    background-image: url("https://cdn.hipwallpaper.com/i/2/15/czjgpO.jpg");
+    background-color: white;
     background-position: center;
     background-repeat: no-repeat;
 }
