--- a/main.css
+++ b/main.css
@@ -94,4 +94,11 @@ text {
     background-repeat: no-repeat;
 }
 
+img {
+    float: left;
+    width: 600px;
+    height 600px;
+    object-fit: cover;
+}
+
 
