--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
    }
 
 button {
+    margin: 1px;
     cursor: pointer;
     line-height: 2;
     padding: 0;
@@ -95,6 +96,7 @@ text {
 }
 
 img {
+    border: 3px solid #FB2;
     float: left;
     width: 600px;
     height 600px;
